objects/Turing_Rule__c.object
<CustomObject>
    <fields>
        <fullName>LHS__c</fullName>
        <label>LHS</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Rule_LHS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Rule (LHS)</label>
        <referenceTo>Turing_Rule__c</referenceTo>
        <relationshipLabel>Child Rule (LHS)</relationshipLabel>
        <relationshipName>Turing_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Rule_RHS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Rule (RHS)</label>
        <referenceTo>Turing_Rule__c</referenceTo>
        <relationshipLabel>Turing Rules (Parent Rule (RHS))</relationshipLabel>
        <relationshipName>Parent_Rule_RHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RHS__c</fullName>
        <label>RHS</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turing_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Turing Configuration</label>
        <referenceTo>Turing_Configuration__c</referenceTo>
        <relationshipLabel>Turing Rules</relationshipLabel>
        <relationshipName>Turing_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Turing Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Turing Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>